hphp/hack/test/typecheck/strict_switch/noreturn_case.php.exp
File "noreturn_case.php", line 7, characters 14-14:
Switching on `nothing` but using constant from `int` (Typing[4023])
